Enable Aserto authorization.